<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddMeetingActivity">

    <EditText
        android:id="@+id/add_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="Date"
        android:maxLines="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/add_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="Time"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@+id/add_date"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/add_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:entries="@array/defaultValue"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@+id/add_time"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/add_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:lines="4"
        android:minLines="4"
        android:ems="10"
        android:hint="Subject"
        app:layout_constraintTop_toBottomOf="@+id/add_location"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/add_participant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="Participants"
        app:layout_constraintTop_toBottomOf="@+id/add_subject"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/button_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Add Meeting"
        app:layout_constraintTop_toBottomOf="@+id/add_participant"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>