<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/toolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="?attr/actionBarSize"-->
<!--        android:background="@color/blue"-->
<!--        android:elevation="4dp"-->
<!--        app:title="Mareu"-->
<!--        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
<!--        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_meeting"
        android:name="com.openclassrooms.entrevoisins.controller.activities.MeetingActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:context=".controller.activities.MeetingActivity"
        tools:listitem="@layout/meeting_item"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_circle_24"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>